# obps-log

./: .gitignore  .gitmodules  CMakeLists.txt  Conf.cmake  Import.cmake  LICENSE  ObpsLogConfig.hpp  ObpsLogConfig.hpp.in  README.md  SetLogLevels.cmake  log_base.hpp  log_impl_wrapper.hpp  log_queue.hpp  log_queue_test.cpp  log_scope_destroyer.hpp  log_test.cpp  obps_log.cpp  obps_log.hpp  obps_log_impl.cpp  obps_log_private.cpp  obps_log_private.hpp  obps_log_public.hpp  simple_test.cpp  spinlock.hpp  test.cpp  test.hpp  thread_pool.hpp
docs/: class_diagram.uxf
src/: CMakeLists.txt  ObpsLogConfig.hpp  log_base.cpp  log_base.hpp  log_def.hpp  log_registry.cpp  log_registry.hpp  log_scope_destroyer.hpp  message_data.hpp  obps_log_private.cpp  obps_log_private.hpp  obps_log_public.hpp
src/tests/: CMakeLists.txt  config_test.cpp  simple_test.cpp  test_global_log.cpp  test_log.cpp
